--- a/cmd/review-service/ReviewService.viper.yaml
+++ b/cmd/review-service/ReviewService.viper.yaml
@@ -1,9 +1,9 @@
 ---
 config:
-  hostname: "service-sample.npool.top"
-  http_port: 32759
-  grpc_port: 32789
-  healthz_port: 32799
+  hostname: "review-service.npool.top"
+  http_port: 35759
+  grpc_port: 35789
+  healthz_port: 35799
   appid: "89089012783789789719823798127398"
   logdir: "./"
   apolloAccessKey: "0147fb70b815403790e8634b899fac07"
