--- a/cmd/review-service/k8s/01-review-service.yaml
+++ b/cmd/review-service/k8s/01-review-service.yaml
@@ -47,4 +47,7 @@ metadata:
 spec:
   ports:
   - name: api
-    port: 8080
+    port: 50050
+    targetPort: 50050
+  selector:
+    app: review-service
