--- a/cmd/review-service/k8s/02-ingress.yaml
+++ b/cmd/review-service/k8s/02-ingress.yaml
@@ -8,41 +8,23 @@ metadata:
     k8s.kuboard.cn/workload: review-service-npool
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-review-service-prefix@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-review-service-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd
 
 spec:
   rules:
     - host: api.npool.top
-      http:
+      http: &http_rules
         paths:
           - path: /api/review-service
             backend:
               serviceName: review-service
               servicePort: 50050
-
----
-
-apiVersion: networking.k8s.io/v1beta1
-kind: Ingress
-metadata:
-  name: review-service-xpool-top-ingress
-  namespace: kube-system
-  annotations:
-    k8s.kuboard.cn/displayName: review-service-xpool
-    k8s.kuboard.cn/workload: review-service-xpool
-    kubernetes.io/ingress.class: "traefik-internet"
-    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-review-service-prefix@kubernetescrd
-
-spec:
-  rules:
     - host: api.xpool.top
-      http:
-        paths:
-          - path: /api/review-service
-            backend:
-              serviceName: review-service
-              servicePort: 50050
+      http: *http_rules
+    - host: www.npool.top
+      http: *http_rules
+    - host: www.xpool.top
+      http: *http_rules
 
 ---
 
