--- a/cmd/review-service/k8s/01-review-service.yaml
+++ b/cmd/review-service/k8s/01-review-service.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: review-service
-        image: entropypool/review-service:latest
+        image: uhub.service.ucloud.cn/entropypool/review-service:latest
         imagePullPolicy: Always
         env:
         - name: ENV_ENVIRONMENT_TARGET
