--- a/cmd/review-service/k8s/02-ingress.yaml
+++ b/cmd/review-service/k8s/02-ingress.yaml
@@ -25,6 +25,8 @@ spec:
       http: *http_rules
     - host: www.xpool.top
       http: *http_rules
+    - host: dashboard.xpool.top
+      http: *http_rules
 
 ---
 
