--- a/cmd/review-service/k8s/02-ingress.yaml
+++ b/cmd/review-service/k8s/02-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     k8s.kuboard.cn/workload: review-service
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-review-service-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-review-service-prefix@kubernetescrd,kube-system-headers-appid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd
 
 spec:
   rules:
@@ -40,7 +40,7 @@ metadata:
     k8s.kuboard.cn/workload: review-service-appid-userid
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-review-service-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-review-service-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd,kube-system-headers-appid-to-body@kubernetescrd,kube-system-headers-userid-to-body@kubernetescrd
 
 spec:
   rules:
