--- a/cmd/review-service/k8s/03-traefik-ingress.yaml
+++ b/cmd/review-service/k8s/03-traefik-ingress.yaml
@@ -28,6 +28,8 @@ spec:
       http: *http_rules
     - host: api.xpool.top
       http: *http_rules
+    - host: api.ohhash.com
+      http: *http_rules
 
 ---
 
@@ -60,5 +62,7 @@ spec:
     - host: api.procyon.vip
       http: *http_rules
     - host: api.xpool.top
+      http: *http_rules
+    - host: api.ohhash.com
       http: *http_rules
 
