--- a/cmd/review-service/k8s/03-traefik-ingress.yaml
+++ b/cmd/review-service/k8s/03-traefik-ingress.yaml
@@ -40,6 +40,8 @@ spec:
       http: *http_rules
     - host: api.singapore-testing.npool.top
       http: *http_rules
+    - host: api.lpsecretbase.com
+      http: *http_rules
 
 ---
 
@@ -84,5 +86,7 @@ spec:
     - host: api.jh-development.npool.top
       http: *http_rules
     - host: api.singapore-testing.npool.top
+      http: *http_rules
+    - host: api.lpsecretbase.com
       http: *http_rules
 
